# ratio

./: .gitignore  README.md  pyproject.toml  tasks.py
doc/: architecture.md  changelog.md  hours.md  software_requirements_specification.md  testing.md  usage.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoli.md
src/: calculations.py  index.py
src/file/: file.py
src/services/: calculations.py
src/tests/: calculations_test.py
src/tests/file/: file_test.py
src/tests/units/: coffee_test.py  recipe_test.py  unit_test.py  water_test.py
src/ui/: entry_filter.py  selector.py  tab_1x.py  tab_gl.py  ui.py
src/units/: coffee.py  recipe.py  unit.py  water.py
