[tool.poetry]
name = "ratio"
version = "0.1.0"
description = "A calculator for specialty coffee"
authors = ["jobatabs <2370315+jobatabs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
